src/objects/Plan__c.object
<CustomObject>
    <description>Provides structure for displaying Plan Data as related to Organizations</description>
    <fields>
        <fullName>AML_Exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AML Exempt?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contracting_Entity_at_MFS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Pulled from Maverick</description>
        <label>Contracting Entity at MFS?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DC_Plan_Type_if_known__c</fullName>
        <label>DC Plan Type (if known)</label>
        <picklist>
            <picklistValues>
                <fullName>401A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>401K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>403B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>457</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Reporting_Date__c</fullName>
        <description>Data pulled from Maverick</description>
        <label>Last Reporting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <description>Related Organization</description>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Plan_Portfolios</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Plan_Fiscal_Year_End__c</fullName>
        <inlineHelpText>The fiscal year of the client&apos;s plan (not the funds year end) This will affect fiscal year reporting  from a performance standpoint.</inlineHelpText>
        <label>Plan Fiscal Year End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_ID__c</fullName>
        <description>Data pulled from Maverick (Plan ID)</description>
        <externalId>true</externalId>
        <label>Plan ID</label>
        <length>4</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Plan_Legal_Name_Full__c</fullName>
        <description>This field was added since the plan name was getting truncated in some cases. The length now matches Maverick.</description>
        <label>Plan Legal Name Full</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Start_Date__c</fullName>
        <label>Plan Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Termination_Date__c</fullName>
        <description>Data pulled from Maverick</description>
        <label>Plan Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <description>data Pulled from Maverick</description>
        <label>Plan Type</label>
        <picklist>
            <picklistValues>
                <fullName>401(k) Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advisory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Allocation Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit Adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brokerage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defined Benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defined Contribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defined Contribution (covers deferred Compensation)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discretionary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endowment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endowment Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Execution Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fund of Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSA - Health Savings Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual/Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Retirement Account (IRA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance General Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Unit Linked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Variable Annuity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Variable Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFS Seed Money</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monetary Authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuclear Decommission Trust</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Retail Account</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Rating__c</fullName>
        <label>Risk Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Plan</label>
    <nameField>
        <label>Plan Legal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>